[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/new_game_menu.gd" id="1_script"]

[node name="NewGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "New Game"
horizontal_alignment = 1

[node name="CivNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Civilization Name:"

[node name="CivNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter civilization name..."

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Difficulty:"

[node name="DifficultyOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="StartingAgeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Starting Age:"

[node name="StartingAgeOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Stone Age"
popup/item_0/id = 0
popup/item_1/text = "Bronze Age"
popup/item_1/id = 1
popup/item_2/text = "Iron Age"
popup/item_2/id = 2

[node name="GameSpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Speed:"

[node name="GameSpeedOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "Slow"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Fast"
popup/item_2/id = 2

[node name="AutoSaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Auto-Save Interval:"

[node name="AutoSaveOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Every 5 minutes"
popup/item_1/id = 1
popup/item_2/text = "Every 15 minutes"
popup/item_2/id = 2
popup/item_3/text = "Every 30 minutes"
popup/item_3/id = 3

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back" 